--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "Proyecto-Final",
+  "name": "proyectofinal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
